# f3_spi_master

./: Cargo.toml  openocd.gdb
src/: main.rs
