[package]
name = "stm_spi_master"
version = "0.1.0"
authors = ["Christopher Michael Sutton <christopher.sutton12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.3"
panic-halt = "0.2.0"

[dependencies.stm32f3xx-hal]
version = "0.5.0"
features = ["stm32f303xc", "rt"]

